refactor: 서비스 레이어의 공통 변수들 GlobalConstants 클래스로 이동